--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 					<div class = "with-style"><a href="#">Мои работы</a></div>
 					<div class = "no-style"><a href="#">Обо мне</a></div>
 				</div>
+				<div class="nav-mobile"><img src="img/nav-button.png"></div>
 				<div class="tel">
 					<a href="#">+38(066) 218 77 71</a>
 				</div>
@@ -33,6 +34,9 @@
 					</div>
 					<div class="job-name">
 						<p>Frontend-разработчик и веб-верстальщик</p>
+					</div>
+					<div class="job-name-mob">
+						<p>Frontend-разработчик <br>и веб-верстальщик</p>
 					</div>
 					<div class="more-information">
 						<button>Узнать больше</button>
