--- a/index.html
+++ b/index.html
@@ -116,8 +116,11 @@
 				</div>
 				<div class="portfolio-slider">
 					<div class="portfolio-1">
-						<div class="portfolio-1-img"><img src="img/porf1.png"></div>
-						<div class="portfolio-1-inf">Сайт психолога</div>
+						<div class="portfolio-1-img">
+							<a href="https://katerynalopatkina.github.io/online-cinema/">
+							<img src="img/porf1.png">
+						</div>
+						<div class="portfolio-1-inf">Online Cinema</div>
 					</div>
 					<div class="portfolio-2">
 						<div class="portfolio-2-img"><img src="img/porf1.png"></div>
