--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 				<div class="portfolio-slider">
 					<div class="portfolio-1">
 						<div class="portfolio-1-img">
-							<a href="https://katerynalopatkina.github.io/online-cinema/">
+							<a href="https://katerynalopatkina.github.io/online-cinema/"></a>
 							<img src="img/porf1.png">
 						</div>
 						<div class="portfolio-1-inf">Online Cinema</div>
